# jbn_daily

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_web.sh  run.sh
.github/workflows/: deploy.yml
src/: game.rs  main.rs
web/: index.html  xiuxian_game.js
