[package]
name = "xiuxian_game"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.27", features = ["wgpu"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.27", default-features = false, features = ["glow"] }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 2
lto = true